Refactored dependencies and docker images